# AppSec

./: action.yaml  pyproject.toml
appsec/: appsec.py  cli.py  urls.py
