[tool.poetry]
name = "appsec"
version = "0.1.0"
description = ""
authors = ["Aaron Joyce <joyceaa@tcd.ie>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
aiohttp = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
appsec = "appsec.cli:cli"